ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/Mid_Year_Reporting__c.object-meta.xml
<CustomObject>
    <description>All mid-year report data for grantees.</description>
    <label>Mid-Year Report</label>
    <nameField>
        <displayFormat>FY14 {MM}/14 - 14{00}</displayFormat>
        <label>Mid-Year Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mid-Year Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>