ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Activity1_NumAdults__c.field-meta.xml
<CustomField>
    <fullName>Activity1_NumAdults__c</fullName>
    <label>Activity 1: # of Adults Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>