ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Activity2_Num_Teens_Served__c.field-meta.xml
<CustomField>
    <fullName>Activity2_Num_Teens_Served__c</fullName>
    <label>Activity 2: # of Teens Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>