ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Activity3_Num_Teens_Served__c.field-meta.xml
<CustomField>
    <fullName>Activity3_Num_Teens_Served__c</fullName>
    <label>Activity 3: # of Teens Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>