ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Activity_1_of_People_Served__c.field-meta.xml
<CustomField>
    <fullName>Activity_1_of_People_Served__c</fullName>
    <label>Activity 1: # of People Served</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>