ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Activity_3_of_People_Served__c.field-meta.xml
<CustomField>
    <fullName>Activity_3_of_People_Served__c</fullName>
    <label>Activity 3: # of People Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>