ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Activity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Activity_Comments__c</fullName>
    <label>Activity Comments/Notes</label>
    <type>TextArea</type>
</CustomField>