ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Grant_Reference__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grant #</label>
    <referenceTo>Grantees__c</referenceTo>
    <relationshipLabel>Mid-Year Reports</relationshipLabel>
    <relationshipName>Final_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>