ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the person who filled out the form.</description>
    <label>Name of Person Completing Report</label>
    <type>TextArea</type>
</CustomField>