ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Num_DomesticViolenceSurvivors__c.field-meta.xml
<CustomField>
    <fullName>Num_DomesticViolenceSurvivors__c</fullName>
    <label># of Domestic Violence Survivors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>