ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Num_HomelesUnstableHousing__c.field-meta.xml
<CustomField>
    <fullName>Num_HomelesUnstableHousing__c</fullName>
    <label># of Homeless/Unstable Housing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>