ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Num_VeryLowIncome_Served__c.field-meta.xml
<CustomField>
    <fullName>Num_VeryLowIncome_Served__c</fullName>
    <label># of Very Low Income Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>