ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Perc_DomesticViolenceSurvivors__c.field-meta.xml
<CustomField>
    <fullName>Perc_DomesticViolenceSurvivors__c</fullName>
    <label>% of Domestic Violence Survivors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>