ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Perc_GrantProgress_Completed__c.field-meta.xml
<CustomField>
    <fullName>Perc_GrantProgress_Completed__c</fullName>
    <description>How far along grantees are towards meeting grant goals in percentage form for all activities.</description>
    <label>% of Grant Progress Completed</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>