ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Perc_HomelessUnstableHousing__c.field-meta.xml
<CustomField>
    <fullName>Perc_HomelessUnstableHousing__c</fullName>
    <label>% of Homeless/Unstable Housing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>