ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Perc_Women_Served__c.field-meta.xml
<CustomField>
    <fullName>Perc_Women_Served__c</fullName>
    <label>% of Women Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>