ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Progress_Comments__c.field-meta.xml
<CustomField>
    <fullName>Progress_Comments__c</fullName>
    <label>Progress Comments/Notes</label>
    <type>TextArea</type>
</CustomField>