ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/fields/Special_Population_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Population_Notes__c</fullName>
    <label>Special Population Notes</label>
    <type>TextArea</type>
</CustomField>