ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grant_Reference__c</columns>
    <columns>Organization__c</columns>
    <columns>Name__c</columns>
    <columns>Perc_GrantProgress_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>