ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Mid_Year_Reporting__c/listViews/New_Reports_Need_to_be_Checked_Sorted.listView-meta.xml
<ListView>
    <fullName>New_Reports_Need_to_be_Checked_Sorted</fullName>
    <columns>NAME</columns>
    <columns>Grant_Reference__c</columns>
    <columns>Organization__c</columns>
    <columns>Name__c</columns>
    <columns>Perc_GrantProgress_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grant_Reference__c</field>
        <operation>equals</operation>
        <value>Mid-Year Reports to be Checked</value>
    </filters>
    <label>New Reports Need to be Checked &amp; Sorted</label>
</ListView>